--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.5.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
