--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^12.8.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
-    "react": "^17.0.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^17.0.0",
+    "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
